[package]
name = "hello_world_tool"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "An agent tool for a hello world axum server"
repository = "https://github.com/kodylow/hello_world_tool"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["full"] }
