[package]
name = "hello_world_tool"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "An agent tool for a hello world axum server"
repository = "https://github.com/kodylow/hello_world_tool"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
reqwest = "0.12.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tcp = "0.1.4"
